--- a/笔记.md
+++ b/笔记.md
@@ -26,4 +26,87 @@ nodejs更适用于io密集型的请求
 
 
 
-nodejs异步io
+nodejs异步io 
+
+​	轮询技术：read select poll kqueue  用来确定io是否完成
+
+希望实现无须主动判断的非阻塞IO，libuv依据平台进行相应的判断
+
+总结： IO是应用程序的瓶颈所在；异步IO提高性能，无需原地等待结果； IO操作属于操作系统级别；NodeJs单线程配合事件驱动架构及libuv实现了异步IO
+
+
+
+### nodejs单线程
+
+高线程实现多并发
+
+异步非阻塞IO配合事件回调通知
+
+nodejs主线程是单线程的，nodejs代码由v8执行，v8只有一个主线程
+
+异步行为分类：网络io， 硬件io，其他io
+
+缺点：过多占用cpu，无法实现cpu多线程优势
+
+```
+
+```
+
+### nodejs工作场景
+
+nodejs作为中间层：在大后端和前端之间搭建中间层
+
+​	接受http请求，格式化数据，渲染html界面 合并接口请求 解决跨域 数据缓存
+
+​	操作数据库提供API服务
+
+​	实时聊天应用程序
+
+nodejs更加适合IO密集型任务   不适合处理大量业务逻辑
+
+​	前端工程化
+
+
+
+### nodejs实现API服务
+
+安装express  安装@types/express
+
+resolveJsonModule : true    //配置支持导入json文件。
+
+
+
+### 14 全局变量之buffer
+
+流操作+管道技术 
+
+数据的端到端传输会有生产者和消费者；问题：生产速度和消费速度不匹配，因此会有等待数据。此时产生了buffer
+
+nodejs中buffer是一片内存空间。
+
+- 无须require的一个全局变量
+- 实现nodejs平台下的二进制数据操作
+- 不占据v8堆内存大小的内存空间
+- 内存的使用由node来控制，由v8的GC回收
+- 一般配合Stream流使用，充当数据缓冲区
+
+### 15 创建buffer
+
+Buffer是nodejs的内置类
+
+创建buffer实例
+
+1. alloc：创建指定字节大小的buffer
+2. allocUnsafe：创建指定大小的bufffer（不安全）
+3. from：接收数据，创建buffer
+
+为什么不使用new：v6前可以，因为new后权限太大
+
+### 16 buffer实例方法
+
+1. fill: 使用数据填充buffer,返回buffer对象
+2. write: 向buffer中写入数据
+3. toString：从buffer中提取数据
+4. slice：截取buffer
+5. indexOf：在buffer中查找数据
+6. copy：拷贝buffer中的数据
