--- a/笔记.md
+++ b/笔记.md
@@ -110,3 +110,8 @@ Buffer是nodejs的内置类
 4. slice：截取buffer
 5. indexOf：在buffer中查找数据
 6. copy：拷贝buffer中的数据
+
+### 17 buffer静态方法
+
+1. concat buffer拼接
+2. isBuffer 判断是否是buffer
