--- a/笔记.md
+++ b/笔记.md
@@ -115,3 +115,89 @@ Buffer是nodejs的内置类
 
 1. concat buffer拼接
 2. isBuffer 判断是否是buffer
+
+
+
+### 29 模块化进程
+
+- commonjs 规范 （超集） 包括io流等 
+- AMD规范  异步加载的模块化规范 
+- CMD规范  整合commonjs和AMD规范  代表cjs
+
+- esmodule  es6的模块化 import导入和export导出  
+
+注： 1 模块化是前端走向工程化中的重要一环
+
+​		 2 早期的js语言层面没有模块化规范
+
+​		 3 commonjs，amd cmd 都是模块化规范
+
+​         4 es6将模块化纳入标准规范
+
+​		 5 当下常用规范是commonjs和esm
+
+
+
+### 30 commonjs规范
+
+commonjs主要应用于nodejs   是语言层面上的规范
+
+- 模块引用
+- 模块定义
+- 模块标识
+
+
+
+nodejs与commonjs
+
+- 任意一个文件就是一模块，具有独立作用域
+- 使用require导入其它模块
+- 将模块id传入require实现目标模块定位
+
+
+
+module属性
+
+任意js文件就是一个模块，可以直接使用module属性
+
+id:
+
+filename: 
+
+loaded:
+
+parent:
+
+children:
+
+exports;
+
+paths:
+
+
+
+module.exports与exports中有啥区别
+
+commonjs中只规定了module.exports进行输入导出操作
+
+单个exports是commonjs为了方便操作给每个模块提供的变量，指向了module.exports对应的内存地址； 直接通过exports导出相应内容，不能给exports进行赋值。
+
+
+
+require属性
+
+- 基本功能是读入并且执行一个模块文件，返回该模块的exports对象
+- resolve: 返回模块文件绝对路径
+- extensions: 依据不同的后缀名执行解析操作
+- main: 返回主模块对象
+
+commonjs规范
+
+- commonjs规范起初是为了弥补js语言模块化缺陷
+- commonjs是语言层面的规范， 当前主要用于nodejs
+- commonjs规定模块化分为引入，定义和标识符三个部分
+- Module在任意模块中可直接使用包含模块信息
+- Require接收标识符，加载目标模块
+- Exports与Module.exports都能导出模块数据
+- commonjs规范定义模块的加载是同步完成的，因此不能应用与浏览器
+
