--- a/笔记.md
+++ b/笔记.md
@@ -160,19 +160,21 @@ module属性
 
 任意js文件就是一个模块，可以直接使用module属性
 
-id:
+id: 当前模块绝对路径
 
-filename: 
+filename:  当前模块绝对路径
 
-loaded:
+loaded:  是否完成加载 boolean值 
 
-parent:
+parent:  对象 指向调用当前模块的module
 
-children:
+children:  导入其他模块的值
 
-exports;
+exports;  当前模块导出的内容
 
-paths:
+path: 父目录
+
+paths: 数组，父目录→根目录
 
 
 
